--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.2",
+    "chewit": "^1.0.1",
     "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
