--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ Thumbs.db
 
 # Folders
 .sass-cache
+.vagrant
+build
 node_modules
 
 
@@ -13,3 +15,4 @@ node_modules
 # Files
 *.css.map
 *.lock
+package-lock.json
