--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "PW-Website",
-  "version": "1.6.0",
+  "name": "pw-software",
+  "description": "My landing page on the web",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.2",
+    "chalk": "^2.4.1",
     "chewit": "^1.0.3",
     "compression": "^1.7.2",
     "cookie-parser": "^1.4.3",
@@ -11,14 +13,27 @@
     "express": "^4.16.3",
     "express-minify-html": "^0.12.0",
     "hbs": "^4.0.1",
-    "hbs-utils": "0.0.4",
-    "morgan": "^1.9.0",
-    "nodemon": "^1.17.3",
-    "serve-favicon": "^2.5.0"
+    "hbs-utils": "0.0.4"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "nodemon": "^1.17.3"
+  },
+  "babel": {
+    "presets": [
+      "env"
+    ]
   },
   "scripts": {
+    "build": "npm run clean && npm install && npm run build-server",
+    "build-server": "babel -d build server",
+    "clean": "rm -rf build package-lock.json && mkdir build",
+    "deploy": "vagrant push",
+    "dev": "NODE_ENV=development nodemon server/index.js --exec babel-node --presets env,stage-2",
     "sass": "sass --watch sass:public/css --style compressed",
-    "start": "nodemon ./bin/www",
+    "start": "npm run build && NODE_ENV=production node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
